--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -13,7 +13,7 @@
       CMS.registerPreviewStyle(
         "https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap"
       );
-      CMS.registerPreviewStyle("/styles/content.module.css");
+      CMS.registerPreviewStyle("/styles/content.module.scss");
       var PostPreview = createClass({
         render: function () {
           var entry = this.props.entry;
